--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,16 +1,19 @@
 name: Sync Fork
 
 on:
-  push: # push 时触发, 主要是为了测试配置有没有问题
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '0 */3 * * *' # every 30 minutes
+  workflow_dispatch: # on button click
+
 jobs:
-  repo-sync:
+  sync:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: TG908/fork-sync@v1.6.3
+      - uses: tgymnich/fork-sync@v1.8
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          owner: miantj # fork 的上游仓库 user
-          head: main # fork 的上游仓库 branch
-          base: main # 本地仓库 branch
+          token: ${{ secrets.PERSONAL_TOKEN }}
+          owner: miantj
+          base: main
+          head: main
